minor changes/cleanup (from N-series project)

--- a/config.plist
+++ b/config.plist
@@ -106,7 +106,7 @@
 				</dict>
 				<dict>
 					<key>Comment</key>
-					<string>change Method(CLRI,0,S) to XKRI</string>
+					<string>change Method(CLRI,0,S) to XLRI</string>
 					<key>Find</key>
 					<data>Q0xSSQg=</data>
 					<key>Replace</key>
@@ -114,19 +114,11 @@
 				</dict>
 				<dict>
 					<key>Comment</key>
-					<string>change SSDT Method(_DSM,4,Serialized) to XDSM</string>
+					<string>change _DSM to XDSM</string>
 					<key>Find</key>
-					<data>X0RTTQxwe2oK/wA=</data>
+					<data>X0RTTQ==</data>
 					<key>Replace</key>
-					<data>WERTTQxwe2oK/wA=</data>
-				</dict>
-				<dict>
-					<key>Comment</key>
-					<string>change SSDT _SB.PCI0.IGPU._DSM to XDSM</string>
-					<key>Find</key>
-					<data>X1NCX1BDSTBJR1BVX0RTTQ==</data>
-					<key>Replace</key>
-					<data>X1NCX1BDSTBJR1BVWERTTQ==</data>
+					<data>WERTTQ==</data>
 				</dict>
 			</array>
 			<key>Fixes</key>
