--- a/config.plist
+++ b/config.plist
@@ -432,7 +432,17 @@
 		<array>
 			<dict>
 				<key>Comment</key>
-				<string>AppleHDA ALC290 (1 of4)</string>
+				<string>AppleHDA ALC290 (1 of 4)</string>
+				<key>Find</key>
+				<data>PYQZ1BE=</data>
+				<key>Name</key>
+				<string>AppleHDA</string>
+				<key>Replace</key>
+				<data>PZAC7BA=</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>AppleHDA ALC290 (2 of 4)</string>
 				<key>Find</key>
 				<data>PYQI7BA=</data>
 				<key>Name</key>
@@ -442,23 +452,13 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>AppleHDA ALC290 (2 of 4)</string>
+				<string>AppleHDA ALC290 (3 of 4)</string>
 				<key>Find</key>
 				<data>PYUI7BA=</data>
 				<key>Name</key>
 				<string>AppleHDA</string>
 				<key>Replace</key>
 				<data>PQAAAAA=</data>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>AppleHDA ALC290 (3 of 4)</string>
-				<key>Find</key>
-				<data>PYQZ1BE=</data>
-				<key>Name</key>
-				<string>AppleHDA</string>
-				<key>Replace</key>
-				<data>PZAC7BA=</data>
 			</dict>
 			<dict>
 				<key>Comment</key>
@@ -472,17 +472,21 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>Enable USB3 post wake</string>
-				<key>Find</key>
-				<data>xoDIAAAAAQ==</data>
+				<string>10.9.5 5Ghz US FCC, svko</string>
+				<key>MatchOS</key>
+				<string>10.9.5</string>
 				<key>Name</key>
-				<string>#AppleUSBXHCI</string>
+				<string>AirPortBrcm4360</string>
+				<key>Find</key>
+				<data>WFQAIBcnIAAA</data>
 				<key>Replace</key>
-				<data>xoDIAAAAAA==</data>
+				<data>WFQAG2cxlQAJ</data>
 			</dict>
 			<dict>
 				<key>Comment</key>
 				<string>10.10.2-5Ghz US FCC, the-darkvoid</string>
+				<key>MatchOS</key>
+				<string>10.10.x,10.11.x,10.12.x</string>
 				<key>Find</key>
 				<data>QYP8/3QsSA==</data>
 				<key>Replace</key>
@@ -492,7 +496,21 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
+				<string>AirPortBrcm4360 - fcvo, 10.12.x (credit the-darkvoid)</string>
+				<key>MatchOS</key>
+				<string>10.12.x</string>
+				<key>Find</key>
+				<data>gflSqgAAdSk=</data>
+				<key>Name</key>
+				<string>AirPortBrcm4360</string>
+				<key>Replace</key>
+				<data>gflSqgAAZpA=</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
 				<string>10.10.2-BT4LE-Handoff-Hotspot, Dokterdok</string>
+				<key>MatchOS</key>
+				<string>10.10.x</string>
 				<key>Find</key>
 				<data>SIXAdFwPt0g=</data>
 				<key>Name</key>
@@ -503,6 +521,8 @@
 			<dict>
 				<key>Comment</key>
 				<string>10.11.dp1+ BT4LE-Handoff-Hotspot, credit RehabMan based on Dokterdok original</string>
+				<key>MatchOS</key>
+				<string>10.11.x,10.12.x</string>
 				<key>Find</key>
 				<data>SIX/dEdIiwc=</data>
 				<key>Name</key>
@@ -553,12 +573,26 @@
 			<dict>
 				<key>Comment</key>
 				<string>Boot graphics glitch, 10.10.x/10.11.x</string>
+				<key>MatchOS</key>
+				<string>10.10.x,10.11.x</string>
 				<key>Find</key>
 				<data>AQAAdRc=</data>
 				<key>Name</key>
 				<string>IOGraphicsFamily</string>
 				<key>Replace</key>
 				<data>AQAAdBc=</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Boot graphics glitch, 10.12.dp1 (credit denskop)</string>
+				<key>MatchOS</key>
+				<string>10.12.x</string>
+				<key>Find</key>
+				<data>AQAAdSU=</data>
+				<key>Name</key>
+				<string>IOGraphicsFamily</string>
+				<key>Replace</key>
+				<data>AQAA6yU=</data>
 			</dict>
 		</array>
 	</dict>
