--- a/config.plist
+++ b/config.plist
@@ -154,8 +154,6 @@
 		</array>
 		<key>SSDT</key>
 		<dict>
-			<key>DropOem</key>
-			<false/>
 			<key>Generate</key>
 			<false/>
 		</dict>
@@ -164,10 +162,6 @@
 	<dict>
 		<key>Arguments</key>
 		<string>kext-dev-mode=1 nv_disable=1 dart=0</string>
-		<key>Legacy</key>
-		<string>PBR</string>
-		<key>Log</key>
-		<false/>
 		<key>NeverHibernate</key>
 		<true/>
 		<key>Secure</key>
@@ -376,8 +370,6 @@
 		</dict>
 		<key>USB</key>
 		<dict>
-			<key>AddClockID</key>
-			<false/>
 			<key>FixOwnership</key>
 			<true/>
 			<key>Inject</key>
@@ -413,12 +405,12 @@
 		<key>Theme</key>
 		<string>bluemac</string>
 	</dict>
-	<key>#Graphics</key>
+	<key>Graphics</key>
 	<dict>
 		<key>Inject</key>
 		<dict>
 			<key>Intel</key>
-			<true/>
+			<false/>
 		</dict>
 		<key>ig-platform-id</key>
 		<string>0x0a260006</string>
