changes for macOS Mojave 10.14 beta

--- a/config.plist
+++ b/config.plist
@@ -198,7 +198,7 @@
 						<key>Key</key>
 						<string>layout-id</string>
 						<key>Value</key>
-						<data>AwAAAA==</data>
+						<data>AgAAAA==</data>
 					</dict>
 					<dict>
 						<key>Key</key>
@@ -219,7 +219,7 @@
 						<key>Key</key>
 						<string>layout-id</string>
 						<key>Value</key>
-						<data>AwAAAA==</data>
+						<data>AgAAAA==</data>
 					</dict>
 					<dict>
 						<key>Key</key>
