--- a/config.plist
+++ b/config.plist
@@ -170,7 +170,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>kext-dev-mode=1 nv_disable=1 dart=0</string>
+		<string>kext-dev-mode=1 nv_disable=1 dart=0 -igfxnohdmi</string>
 		<key>NeverHibernate</key>
 		<true/>
 		<key>Secure</key>
@@ -185,190 +185,99 @@
 	</dict>
 	<key>Devices</key>
 	<dict>
-		<key>Arbitrary</key>
-		<array>
-			<dict>
-				<key>Comment</key>
-				<string>Intel HDA</string>
-				<key>PciAddr</key>
-				<string>00:1B.00</string>
-				<key>CustomProperties</key>
-				<array>
-					<dict>
-						<key>Key</key>
-						<string>layout-id</string>
-						<key>Value</key>
-						<data>AgAAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>PinConfigurations</string>
-						<key>Value</key>
-						<data></data>
-					</dict>
-				</array>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Intel HDMI HDA</string>
-				<key>PciAddr</key>
-				<string>00:03.00</string>
-				<key>CustomProperties</key>
-				<array>
-					<dict>
-						<key>Key</key>
-						<string>layout-id</string>
-						<key>Value</key>
-						<data>AgAAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>hda-gfx</string>
-						<key>Value</key>
-						<string>onboard-1</string>
-					</dict>
-				</array>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Intel EHCI #1</string>
-				<key>PciAddr</key>
-				<string>00:1D.00</string>
-				<key>CustomProperties</key>
-				<array>
-					<dict>
-						<key>Key</key>
-						<string>subsystem-id</string>
-						<key>Value</key>
-						<data>cHIAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>subsystem-vendor-id</string>
-						<key>Value</key>
-						<data>hoAAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-available</string>
-						<key>Value</key>
-						<integer>2100</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-extra</string>
-						<key>Value</key>
-						<integer>2200</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-extra-in-sleep</string>
-						<key>Value</key>
-						<integer>1600</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,max-port-current-in-sleep</string>
-						<key>Value</key>
-						<integer>2100</integer>
-					</dict>
-				</array>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Intel EHCI #2</string>
-				<key>PciAddr</key>
-				<string>00:1A.00</string>
-				<key>CustomProperties</key>
-				<array>
-					<dict>
-						<key>Key</key>
-						<string>subsystem-id</string>
-						<key>Value</key>
-						<data>cHIAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>subsystem-vendor-id</string>
-						<key>Value</key>
-						<data>hoAAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-available</string>
-						<key>Value</key>
-						<integer>2100</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-extra</string>
-						<key>Value</key>
-						<integer>2200</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-extra-in-sleep</string>
-						<key>Value</key>
-						<integer>1600</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,max-port-current-in-sleep</string>
-						<key>Value</key>
-						<integer>2100</integer>
-					</dict>
-				</array>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Intel XHCI</string>
-				<key>PciAddr</key>
-				<string>00:14.00</string>
-				<key>CustomProperties</key>
-				<array>
-					<dict>
-						<key>Key</key>
-						<string>subsystem-id</string>
-						<key>Value</key>
-						<data>cHIAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>subsystem-vendor-id</string>
-						<key>Value</key>
-						<data>hoAAAA==</data>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-available</string>
-						<key>Value</key>
-						<integer>2100</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-extra</string>
-						<key>Value</key>
-						<integer>2200</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,current-extra-in-sleep</string>
-						<key>Value</key>
-						<integer>1600</integer>
-					</dict>
-					<dict>
-						<key>Key</key>
-						<string>AAPL,max-port-current-in-sleep</string>
-						<key>Value</key>
-						<integer>2100</integer>
-					</dict>
-				</array>
-			</dict>
-		</array>
 		<key>Audio</key>
 		<dict>
 			<key>Inject</key>
 			<integer>0</integer>
+		</dict>
+		<key>Properties</key>
+		<dict>
+			<key>PciRoot(0)/Pci(0x02,0)</key>
+			<dict>
+				<key>#Comment</key>
+				<string>Intel HD Graphics</string>
+				<key>framebuffer-patch-enable</key>
+				<data>AQAAAA==</data>
+				<key>#Comment-0</key>
+				<string>9MB cursor bytes (as per orginal vbo idea)</string>
+				<key>framebuffer-cursormem</key>
+				<data>AACQAA==</data>
+				<key>#Comment-1</key>
+				<string>0x0a260006 disable 0204 port, change 0105 port to HDMI (RehabMan)</string>
+				<key>framebuffer-con1-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con1-alldata</key>
+				<data>AQUSAAAIAACHAAAA/wAAAAEAAABAAAAA</data>
+			</dict>
+			<key>PciRoot(0)/Pci(0x1b,0)</key>
+			<dict>
+				<key>#Comment</key>
+				<string>Intel HDA</string>
+				<key>layout-id</key>
+				<data>AgAAAA==</data>
+				<key>PinConfigurations</key>
+				<data></data>
+			</dict>
+			<key>PciRoot(0)/Pci(0x03,0)</key>
+			<dict>
+				<key>#Comment</key>
+				<string>Intel HDMI HDA</string>
+				<key>layout-id</key>
+				<data>AgAAAA==</data>
+				<key>hda-gfx</key>
+				<string>onboard-1</string>
+			</dict>
+			<key>PciRoot(0)/Pci(0x1d,0)</key>
+			<dict>
+				<key>#Comment</key>
+				<string>Intel EHCI #1</string>
+				<key>subsystem-id</key>
+				<data>cHIAAA==</data>
+				<key>subsystem-vendor-id</key>
+				<data>hoAAAA==</data>
+				<key>AAPL,current-available</key>
+				<integer>2100</integer>
+				<key>AAPL,current-extra</key>
+				<integer>2200</integer>
+				<key>AAPL,current-extra-in-sleep</key>
+				<integer>1600</integer>
+				<key>AAPL,max-port-current-in-sleep</key>
+				<integer>2100</integer>
+			</dict>
+			<key>PciRoot(0)/Pci(0x1a,0)</key>
+			<dict>
+				<key>#Comment</key>
+				<string>Intel EHCI #1</string>
+				<key>subsystem-id</key>
+				<data>cHIAAA==</data>
+				<key>subsystem-vendor-id</key>
+				<data>hoAAAA==</data>
+				<key>AAPL,current-available</key>
+				<integer>2100</integer>
+				<key>AAPL,current-extra</key>
+				<integer>2200</integer>
+				<key>AAPL,current-extra-in-sleep</key>
+				<integer>1600</integer>
+				<key>AAPL,max-port-current-in-sleep</key>
+				<integer>2100</integer>
+			</dict>
+			<key>PciRoot(0)/Pci(0x14,0)</key>
+			<dict>
+				<key>#Comment</key>
+				<string>Intel EHCI #1</string>
+				<key>subsystem-id</key>
+				<data>cHIAAA==</data>
+				<key>subsystem-vendor-id</key>
+				<data>hoAAAA==</data>
+				<key>AAPL,current-available</key>
+				<integer>2100</integer>
+				<key>AAPL,current-extra</key>
+				<integer>2200</integer>
+				<key>AAPL,current-extra-in-sleep</key>
+				<integer>1600</integer>
+				<key>AAPL,max-port-current-in-sleep</key>
+				<integer>2100</integer>
+			</dict>
 		</dict>
 		<key>#FakeID</key>
 		<dict>
@@ -549,48 +458,6 @@
 				<data>SIX/dEdIiwc=</data>
 				<key>Replace</key>
 				<data>Qb4PAAAA60Q=</data>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>0x0a260006 9MB cursor bytes, vbo</string>
-				<key>Name</key>
-				<string>com.apple.driver.AppleIntelFramebufferAzul</string>
-				<key>Find</key>
-				<data>BgAmCgEDAwMAAAACAAAwAQAAYAA=</data>
-				<key>Replace</key>
-				<data>BgAmCgEDAwMAAAACAAAwAQAAkAA=</data>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>HDMI-audio, port 0105(12), 0x0a260005 0x0a260006, 0x0d220003, 0x0a2e000a, 0x0a26000a</string>
-				<key>Name</key>
-				<string>com.apple.driver.AppleIntelFramebufferAzul</string>
-				<key>Find</key>
-				<data>AQUJAAAEAACHAAAA</data>
-				<key>Replace</key>
-				<data>AQUSAAAIAACHAAAA</data>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>HDMI-audio, port 0204(12), 0x0a260005 0x0a260006</string>
-				<key>Disabled</key>
-				<true/>
-				<key>Name</key>
-				<string>com.apple.driver.AppleIntelFramebufferAzul</string>
-				<key>Find</key>
-				<data>AgQJAAAEAACHAAAA</data>
-				<key>Replace</key>
-				<data>AgQSAAAIAACHAAAA</data>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>disable port 0204 for lag, 0x0a260005 0x0a260006</string>
-				<key>Name</key>
-				<string>com.apple.driver.AppleIntelFramebufferAzul</string>
-				<key>Find</key>
-				<data>AgQJAAAEAACHAAAA</data>
-				<key>Replace</key>
-				<data>/wAAAAEAAABAAAAA</data>
 			</dict>
 			<dict>
 				<key>Comment</key>
