--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
 .DS_Store
 stash/*
-downloads/*
-patched/ssdt*.dsl
-patched/dsdt.dsl
-unpatched/ssdt*.dsl
-unpatched/dsdt.dsl
-patched/dsdt.dsl
+tools/*
+_downloads/*
 build/*
 !build/readme.txt
-Resources_ALC290/layout/*.zlib
+AppleHDA_ALC290.kext/
+_hdainject_marker.txt
 envy15.xcodeproj/project.xcworkspace/xcuserdata
 envy15.xcodeproj/project.xcworkspace/xcshareddata/envy15.xccheckout
+envy15.xcodeproj/project.xcworkspace/xcshareddata/
 envy15.xcodeproj/xcuserdata
 native_linux/*
 !native_linux/readme.txt
