--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ build/*
 !build/readme.txt
 AppleHDA_ALC290.kext/
 _hdainject_marker.txt
-envy15.xcodeproj/project.xcworkspace/xcuserdata
-envy15.xcodeproj/project.xcworkspace/xcshareddata/envy15.xccheckout
-envy15.xcodeproj/project.xcworkspace/xcshareddata/
-envy15.xcodeproj/xcuserdata
+Patches.xcodeproj/project.xcworkspace/xcuserdata
+Patches.xcodeproj/project.xcworkspace/xcshareddata/envy15.xccheckout
+Patches.xcodeproj/project.xcworkspace/xcshareddata/
+Patches.xcodeproj/xcuserdata
 native_linux/*
 !native_linux/readme.txt
 native_patchmatic/*
